[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/icon.svg" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://audio/enemy_explosion.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/laserShoot.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/EnemyBullet.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="Enemy" type="Area2D" groups=["enemies"]]
position = Vector2( 957, 189 )
scale = Vector2( 2, 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
EnemyBullet = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.0941176, 0.662745, 0.396078, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EnemyBulletPosition" type="Position2D" parent="."]
position = Vector2( -73, -1 )

[node name="Enemy1ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="ShootTimer" type="Timer" parent="." groups=["Player"]]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_Timer_timeout"]
